# surreal-ts

./: .gitignore  Cargo.toml  README.md  db.d.ts  test.surql  test_config.json  types.d.ts
.github/workflows/: cd.yaml
npm/: package.json.tmpl
npm/app/: README.md  package.json
npm/app/src/: index.js
src/: config.rs  main.rs  meta.rs  parser.rs  table_info.rs  ts.rs  utils.rs
src/assets/: meta_types.ts
src/outputs/: db.rs  mod.rs  ts.rs
surreal-ts/: Cargo.toml  README.md
surreal-ts-core/: Cargo.toml
surreal-ts-core/src/: field_tree.rs  generator.rs  lib.rs  parser.rs
surreal-ts-core/src/field_tree/: mod.rs  tests.rs
surreal-ts/npm/app/: package.json
surreal-ts/src/: main.rs  meta.rs  ts.rs
