[package]
name = "surreal-ts"
version = "3.0.0"
edition = "2024"
license = "GPL-3.0-only"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
convert_case = "0.8.0"
itertools = "0.14.0"
reblessive = "0.4.3"
serde = "1.0.219"
serde_json = "1.0.140"
surrealdb = { version = "2.3.3", features = ["protocol-http"] }
tokio = "1.45.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
